common-applications/test-environment/opengauss-usercenter/opengauss-docs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengauss-docs-deployment
  namespace: opengauss-usercenter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opengauss-docs
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: opengauss-docs
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/usercenter-docs:v1.0.20221223113210
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 5
        name: opengauss-docs
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 500m
            memory: 500Mi
