common-applications/test-environment/opengauss-usercenter/opengauss-docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengauss-docs-service
  namespace: opengauss-usercenter
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: opengauss-docs
  type: ClusterIP
