common-applications/test-environment/opengauss-usercenter/opengauss-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengauss-website-service
  namespace: opengauss-usercenter
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: opengauss-website
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: opengauss-meeting-service
  namespace: opengauss-usercenter
spec:
  type: ExternalName
  externalName: meetingserver-service.opengauss-website-revision.svc.cluster.local
