common-applications/test-environment/opengauss-usercenter/opengauss-docs-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: opengauss-docs-new-ingress
  namespace: opengauss-usercenter
spec:
  rules:
  - host: docs.opengauss.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: opengauss-docs-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - docs.opengauss.test.osinfra.cn
    secretName: opengauss-docs-new-tls
