common-applications/test-environment/opengauss-usercenter/opengauss-website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: opengauss-website-ingress
  namespace: opengauss-usercenter
spec:
  rules:
  - host: website-test.opengauss.org
    http:
      paths:
      - backend:
          serviceName: opengauss-website-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - website-test.opengauss.org
    secretName: opengauss-website-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: opengauss-website-meeting-ingress
  namespace: opengauss-usercenter
spec:
  rules:
  - host: website-test.opengauss.org
    http:
      paths:
      - backend:
          serviceName: opengauss-meeting-service
          servicePort: 80
        path: /calendar(/|$)(.*)
  tls:
  - hosts:
    - website-test.opengauss.org
    secretName: opengauss-website-meeting-tls
